--- a/DataMan/Records/templates/records.html
+++ b/DataMan/Records/templates/records.html
@@ -27,4 +27,7 @@
     </path>
     </svg>
 </a>
+<div class="map">
+    <img src="{% static 'images/Untitled-Project.jpg' %}">
+</div>
 {% endblock %}
