updated temporary visual, will be updated

--- a/DataMan/Records/templates/records.html
+++ b/DataMan/Records/templates/records.html
@@ -28,6 +28,6 @@
     </svg>
 </a>
 <div class="map">
-    <img src="{% static 'images/Untitled-Project.jpg' %}">
+    <img src="{% static 'images/map.jpg' %}">
 </div>
 {% endblock %}
