--- a/DataMan/Records/templates/Records/experiment_detail.html
+++ b/DataMan/Records/templates/Records/experiment_detail.html
@@ -8,6 +8,7 @@
 <p>    Team Members: {{experiment.teamMembers}}</p>
 <p><Strong>IRB Number:</Strong> {{experiment.IRB}} </p>
 <p><Strong>Experimental Design:</Strong> {{experiment.experimentalDesign}} </p>
+<p><Strong>Comments:</Strong></p><ul>{{experiment.comments}}</ul>
 <a class="nav-block" href="{% url 'edit-experiment' experiment.experimentID %}">
     <p class="nav-block__title">Edit</p>
 </a>
