Fixed local backup - not box

--- a/DataMan/Records/templates/backup.html
+++ b/DataMan/Records/templates/backup.html
@@ -14,7 +14,8 @@
         that should be allowed for the end-user rather than preset.-->
 
     <div>{{error}}</div>
-  {{form}}
+ 
+    {{form.as_p}}
 
   <br><br>
   {% for b in options %}
