--- a/DataMan/Records/templates/upload.html
+++ b/DataMan/Records/templates/upload.html
@@ -2,12 +2,14 @@
 page for uploading excel files-->
 {% extends "generic.html" %}
 {% load staticfiles%}
+{% load django_tables2 %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static '/css/upload.css' %}" />
 <h1>UPLOAD DATA</h1>
 <form name="entry" action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
+    {% if form %}
     <a class="nav-block" href="{% static 'download-template.xlsx' %}">
             <p class="nav-block__title"> Download Template</p>
     </a>
@@ -22,16 +24,13 @@ page for uploading excel files-->
     {% endfor %}
     <br><br>
     <input class="nav-block" type="submit" value="Submit" name="Submit" id="Submit"/>
+    {% endif %}
 </form>
 
 <form name="confirm" action="#" method="get">
-<h3>{{upload_status}}</h3>
-  {% for i in summary %}
-    <p>
-    {% for f in i %}
-      {{f}}
-    {% endfor %}
-    </p>
+  {% for table in tables %}
+    {% render_table table %}
+    <br>
   {% endfor %}
   {% for b in upload_options %}
     <input type="button" id ={{b}} name="option" value={{b}} 
@@ -39,3 +38,4 @@ page for uploading excel files-->
   {% endfor %}
 </form>
 {% endblock %}
+
