--- a/DataMan/Records/templates/upload.html
+++ b/DataMan/Records/templates/upload.html
@@ -10,9 +10,6 @@ page for uploading excel files-->
 <form name="entry" action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {% if form %}
-    <a class="nav-block" href="{% static 'download-template.xlsx' %}">
-            <p class="nav-block__title"> Download Template</p>
-    </a>
     {% for field in form %}
       <p class="form-title">{{ field.label }}</p>
       {% for error in field.errors %}
@@ -24,6 +21,16 @@ page for uploading excel files-->
     {% endfor %}
     <br><br>
     <input class="nav-block" type="submit" value="Submit" name="Submit" id="Submit"/>
+    <br><br>
+    <a class="nav-block" href="{% static 'download-template.xlsx' %}">
+        <p class="nav-block__title"> Download Template</p>
+    </a>
+    <a class="nav-block" href="{% static 'download-template-Kelly.xlsx' %}">
+        <p class="nav-block__title"> Download Template (Kelly Lab)</p>
+    </a>
+    <a class="nav-block" href="{% static 'download-template-Price.xlsx' %}">
+        <p class="nav-block__title"> Download Template (Price Lab)</p>
+    </a>
     {% endif %}
 </form>
 
