--- a/DataMan/Records/templates/Records/sample_detail.html
+++ b/DataMan/Records/templates/Records/sample_detail.html
@@ -7,6 +7,21 @@
 
 <p><Strong>Experiment:</Strong><a href="{% url 'experiment-detail' sample.experiment.experimentID %}">
     {{sample.experiment}}</a></p>
+
+<Strong>Individuals:</Strong>
+    {% if sample.individual.all.count != 0 %}
+<ul style="margin-left: 5px;">
+    {% for Indiv in sample.individual.all %}
+    <li>
+        <a href="{% url 'individual-detail' Indiv.individualID %}"> {{Indiv}} </a>
+    </li>
+    {% endfor %}
+</ul>
+        {% else %}
+<p> No Individuals found. </p>
+        {% endif %}
+<p>
+
 <p><Strong>Storage Condition:</Strong> {{sample.storageCondition}}</p>
 <p><Strong>Storage Location:</Strong> {{sample.storageLocation}}</p>
 <p><Strong>Treatment Protocols:</Strong> </p>
