--- a/DataMan/Records/templates/Records/individual_detail.html
+++ b/DataMan/Records/templates/Records/individual_detail.html
@@ -4,7 +4,11 @@
 {% block content %}
 <link rel="stylesheet" href="{% static '/css/detail.css' %}" />
 <h2>{{ individual }}</h2>
-<p><Strong>Experiment:</Strong> {{individual.experiment}} </p>
+<p><Strong>Experiment:</Strong><a href="{% url 'experiment-detail' individual.experiment.experimentID %}">
+    {{individual.experiment}}</a></p>
+<p><Strong>Gender:</Strong> {{individual.gender}} </p>
+<p><Strong>Age:</Strong> {{individual.age}} </p>
+<p><Strong>Health Status:</Strong> {{individual.healthStatus}} </p>
 <p><Strong>Comments:</Strong> {{individual.comments}} </p>
 {% for i, val in extra_fields.items %}
   <p><Strong>{{i}}:</Strong> {{ val }} </p>
